# meeting-ai

./: README.md  pyproject.toml
app/: config.py  logging_config.py  ui.py
app/prompts/: summary.txt
app/services/: ffmpeg_audio.py  file_scan.py  ollama_llm.py  pipeline.py  whisper_asr.py
